inserindo ipykernel no pyproject e atualizando csv path

--- a/notebooks/Teste_de_hipótese_proporção_2_amostras.ipynb
+++ b/notebooks/Teste_de_hipótese_proporção_2_amostras.ipynb
@@ -227,7 +227,7 @@
       "source": [
         "# carregando o csv num dataframe\n",
         "\n",
-        "df_test = pd.read_csv(\"C:\\\\Users\\\\vanes\\\\Documents\\\\Vanessa_PED_EBA\\\\github_EBA\\\\EBA-aula04-TesteHipoteseIntervaloConfianca\\\\data\\\\df_test.csv\")\n",
+        "df_test = pd.read_csv(\"../data/df_test.csv\")\n",
         "df_test"
       ]
     },
